<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MiPrimerDesafio</string>
    <string name="Nombre" tools:ignore="DuplicateDefinition">Nombre</string>
    <string name="name">Name</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="Apellido" />
    <string name="apellido">Apellido</string>
    <string name="todo">TODO</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

</resources>